2007-06-25  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_access/pam_access.c (list_match): Use saveptr of strtok_r
	result for recursive calls.
	* xtests/Makefile.am: Add new pam_access test cases.
	* xtests/pam_access1.c: New test case.
	* xtests/pam_access2.c: Likewise.
	* xtests/pam_access3.c: Likewise.
	* xtests/pam_access4.c: Likewise.
	* xtests/pam_access1.sh: Wrapper to create user accounts.
	* xtests/pam_access2.sh: Likewise.
	* xtests/pam_access3.sh: Likewise.
	* xtests/pam_access4.sh: Likewise.
	* xtests/pam_access1.pamd: PAM config file for pam_access tests.
	* xtests/pam_access2.pamd: Likewise.
	* xtests/pam_access3.pamd: Likewise.
	* xtests/pam_access4.pamd: Likewise.
	* xtests/access.conf: Config file for pam_access tests.
	* xtests/run-tests.sh: Install access.conf into system.

2007-06-22  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_loginuid/pam_loginuid.c (set_loginuid): Print
	better error message if /proc/self/loginuid cannot be opened.

	* modules/pam_limits/pam_limits.c (process_limit): Check for
	variable overflow after multiplication [bnc#283001].

	* modules/pam_access/pam_access.c: Add new syntax for groups
	in access.conf to differentiate group names from account names.
	Based on patch from Julien Lecomte <julien@famille-lecomte.net>,
	solves feature request [#411390].
	* modules/pam_access/access.conf: Add example for new group
	syntax.
	* modules/pam_access/access.conf.5.xml: Document new syntax.

2007-06-20  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_cracklib/pam_cracklib.8.xml: Document new minclass
	option.
	* modules/pam_cracklib/pam_cracklib.c: Add support for minimum
	character classes [#1688777]. Based on patch from Keith Schincke.

	* xtests/tst-pam_cracklib2.c: New, test case for minclass option.
	* xtests/tst-pam_cracklib2.pamd: New, PAM config file for test case.
	* xtests/Makefile.am: Add new testcase.

	* xtests/pam_cracklib.c: Fix comment what this application tests.
