@@ -18,6 +18,8 @@ all=0
 mkdir -p /etc/security
 cp /etc/security/access.conf /etc/security/access.conf-pam-xtests
 install -m 644 "${SRCDIR}"/access.conf /etc/security/access.conf
+cp /etc/security/limits.conf /etc/security/limits.conf-pam-xtests
+install -m 644 "${SRCDIR}"/limits.conf /etc/security/limits.conf
 for testname in $XTESTS ; do
 	  install -m 644 "${SRCDIR}"/$testname.pamd /etc/pam.d/$testname
 	  if test -x "${SRCDIR}"/$testname.sh ; then
@@ -36,6 +38,7 @@ for testname in $XTESTS ; do
 	  rm -f /etc/pam.d/$testname
 done
 mv /etc/security/access.conf-pam-xtests /etc/security/access.conf
+mv /etc/security/limits.conf-pam-xtests /etc/security/limits.conf
 if test "$failed" -ne 0; then
 	  echo "==================="
 	  echo "$failed of $all tests failed"
